# ksysguard6

./: 0001-Export-header-still-used-by-ksysguard.patch  0002-Disable-GPU-and-network-plugins.patch  CMakeLists.txt  flake.nix
debian/: control
formatter/: CMakeLists.txt  Formatter.cpp
gui/: CMakeLists.txt  WorkSheet.cpp  Workspace.cpp  ksysguard.cpp  ksysguard.h  ksysguardui.rc
gui/SensorDisplayLib/: FancyPlotter.cpp  ProcessController.cpp  ProcessController.h  SensorDisplay.cpp
ksgrd/: CMakeLists.txt  SensorAgent.cpp  SensorManager.cpp  SensorShellAgent.cpp
ksysguardd/Linux/: ProcessList.c  stat.c
po/af/: ksysguard.po
po/ar/: ksysguard.po
po/az/: ksysguard.po
po/be/: ksysguard.po
po/be@latin/: ksysguard.po
po/bg/: ksysguard.po
po/bn/: ksysguard.po
po/bn_IN/: ksysguard.po
po/br/: ksysguard.po
po/bs/: ksysguard.po
po/ca/: ksysguard.po
po/ca@valencia/: ksysguard.po
po/cs/: ksysguard.po
po/csb/: ksysguard.po
po/cy/: ksysguard.po
po/da/: ksysguard.po
po/de/: ksysguard.po
po/el/: ksysguard.po
po/en_GB/: ksysguard.po
po/eo/: ksysguard.po
po/es/: ksysguard.po
po/et/: ksysguard.po
po/eu/: ksysguard.po
po/fa/: ksysguard.po
po/fi/: ksysguard.po
po/fr/: ksysguard.po
po/fy/: ksysguard.po
po/ga/: ksysguard.po
po/gl/: ksysguard.po
po/gu/: ksysguard.po
po/he/: ksysguard.po
po/hi/: ksysguard.po
po/hne/: ksysguard.po
po/hr/: ksysguard.po
po/hsb/: ksysguard.po
po/hu/: ksysguard.po
po/ia/: ksysguard.po
po/id/: ksysguard.po
po/is/: ksysguard.po
po/it/: ksysguard.po
po/ja/: ksysguard.po
po/ka/: ksysguard.po
po/kk/: ksysguard.po
po/km/: ksysguard.po
po/kn/: ksysguard.po
po/ko/: ksysguard.po
po/ku/: ksysguard.po
po/lt/: ksysguard.po
po/lv/: ksysguard.po
po/mai/: ksysguard.po
po/mk/: ksysguard.po
po/ml/: ksysguard.po
po/mr/: ksysguard.po
po/ms/: ksysguard.po
po/nb/: ksysguard.po
po/nds/: ksysguard.po
po/ne/: ksysguard.po
po/nl/: ksysguard.po
po/nn/: ksysguard.po
po/oc/: ksysguard.po
po/or/: ksysguard.po
po/pa/: ksysguard.po
po/pl/: ksysguard.po
po/pt/: ksysguard.po
po/pt_BR/: ksysguard.po
po/ro/: ksysguard.po
po/ru/: ksysguard.po
po/se/: ksysguard.po
po/si/: ksysguard.po
po/sk/: ksysguard.po
po/sl/: ksysguard.po
po/sq/: ksysguard.po
po/sr/: ksysguard.po
po/sr@ijekavian/: ksysguard.po
po/sr@ijekavianlatin/: ksysguard.po
po/sr@latin/: ksysguard.po
po/sv/: ksysguard.po
po/ta/: ksysguard.po
po/te/: ksysguard.po
po/tg/: ksysguard.po
po/th/: ksysguard.po
po/tr/: ksysguard.po
po/ug/: ksysguard.po
po/uk/: ksysguard.po
po/uz/: ksysguard.po
po/uz@cyrillic/: ksysguard.po
po/vi/: ksysguard.po
po/wa/: ksysguard.po
po/xh/: ksysguard.po
po/zh_CN/: ksysguard.po
po/zh_TW/: ksysguard.po
processcore/: CMakeLists.txt
processcore/plugins/nvidia/: nvidia.cpp  nvidia.h
processui/: CMakeLists.txt  ProcessModel.cpp  ProcessModel.h  ProcessModel_p.h  ReniceDlg.cpp  ksysguardprocesslist.cpp  scripting.cpp  scripting.h
processui/processdetails/: MemoryMapsTab.cpp  ProcessDetailsDialog.cpp
signalplotter/: CMakeLists.txt
